crates/courier-ftp/src/app/vault/snapshots/courier_ftp__app__vault__snapshot_tests__unlock_startup_mono_ascii@80x24.snap
---
source: crates/courier-ftp/src/app/vault/snapshot_tests.rs
expression: text
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
      + [locked] Unlock courier-ftp -------------------------------------+      
      |Enter your master password to unlock courier-ftp.                 |      
      |                                                                  |      
      |Password: ********_                                               |      
      |                                                                  |      
      |                                                                  |      
      |Enter unlock - Esc clear - Ctrl-r forgot password?                |      
      |Ctrl-n continue without vault (quickconnect only, nothing saved)  |      
      +------------------------------------------------------------------+      
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 [not connected] | [vault locked] | Type: Auto | lim off                        
--- styles ---
  7   6+68  Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
  8   6+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
  8  73+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
  9   6+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
  9  73+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 10   6+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 10   7+10  Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
 10  17+9   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 10  73+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 11   6+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 11  73+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 12   6+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 12  73+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 13   6+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 13   7+50  Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
 13  73+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 14   6+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 14   7+64  Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
 14  73+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 15   6+68  Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 23   1+15  Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
 23  19+14  Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).reversed()
