crates/courier-ftp/src/app/vault/snapshots/courier_ftp__app__vault__snapshot_tests__unlock_wrong_password@160x48.snap
---
source: crates/courier-ftp/src/app/vault/snapshot_tests.rs
expression: text
---
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                              ┌ 🔒  Unlock courier-ftp ───────────────────────────────────────────┐                                              
                                              │Enter your master password to unlock courier-ftp.                 │                                              
                                              │                                                                  │                                              
                                              │Password: ▏                                                       │                                              
                                              │                                                                  │                                              
                                              │Wrong password (2 failed attempts)                                │                                              
                                              │Enter unlock · Esc clear · Ctrl-r forgot password?                │                                              
                                              │Ctrl-n continue without vault (quickconnect only, nothing saved)  │                                              
                                              └──────────────────────────────────────────────────────────────────┘                                              
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
 – not connected │ 🔐  vault locked │ Type: Auto │ ⇅ off                                                                                                         
--- styles ---
 19  46+3   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 19  50+64  Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 20  46+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 20 113+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 21  46+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 21 113+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 22  46+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 22  47+10  Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
 22  57+1   Style::new().fg(Color::Indexed(6)).bg(Color::Reset).underline_color(Color::Reset).bold()
 22 113+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 23  46+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 23 113+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 24  46+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 24  47+34  Style::new().fg(Color::Indexed(1)).bg(Color::Reset).underline_color(Color::Reset).bold()
 24 113+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 25  46+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 25  47+50  Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
 25 113+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 26  46+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 26  47+64  Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
 26 113+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 27  46+68  Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 47   0+1   Style::new().fg(Color::Reset).bg(Color::Indexed(236)).underline_color(Color::Reset)
 47   1+15  Style::new().fg(Color::Indexed(246)).bg(Color::Indexed(236)).underline_color(Color::Reset)
 47  16+3   Style::new().fg(Color::Reset).bg(Color::Indexed(236)).underline_color(Color::Reset)
 47  19+1   Style::new().fg(Color::Indexed(0)).bg(Color::Indexed(6)).underline_color(Color::Reset)
 47  21+13  Style::new().fg(Color::Indexed(0)).bg(Color::Indexed(6)).underline_color(Color::Reset)
 47  34+126 Style::new().fg(Color::Reset).bg(Color::Indexed(236)).underline_color(Color::Reset)
